--- a/app/views/admin/health/index.html.erb
+++ b/app/views/admin/health/index.html.erb
@@ -1,3 +1,9 @@
 <h1>Health</h1>
 
+<!--
 <%= button_to("Throw exception", admin_health_path(:action => 'generate_exception')) %>
+-->
+
+<%= link_to("Google Analytics", "http://www.google.com/analytics/", {:class => "btn" , :target => "_blank"}) %>
+
+<%= link_to("Heroku New Relics", "https://api.heroku.com/login", {:class => "btn" ,:target => "_blank"}) %>
